--- a/college/homework7_3.html
+++ b/college/homework7_3.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>homework</title>
 	</head>
-	<body style="background:url(img/back.jpg);">
+	<body style="background:url(img/back.jpg);background-size: cover;">
 		
 		<div align="center" style="background: url(img/div2.jpg); height: 50px;">
 			<br />
