--- a/bdqn_APP/example7_5.1.html
+++ b/bdqn_APP/example7_5.1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head lang="en">
 		<meta charset="UTF-8">
 		<title>css</title>
 		<link href="css/ex.css" rel="stylesheet" type="text/css" />
