--- a/myself/myself.html
+++ b/myself/myself.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head lang="en">
 		<meta charset="utf-8" />
 		<title></title>
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
 	<body>
-		
+		<header >
+			
+			<br />
+			<br />
+			<br />
+			
+			
+		</header>
 	</body>
 </html>
