--- a/myself/myself.html
+++ b/myself/myself.html
@@ -7,11 +7,9 @@
 	</head>
 	<body>
 		<header >
-			
-			<br />
-			<br />
-			<br />
-			
+			<div>
+			<img src="img/朝阳.jpg" />
+			</div>
 			
 		</header>
 	</body>
