--- a/myself/form.html
+++ b/myself/form.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8">
 		<title>登录</title>
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
+		<style>
+			body{
+				background-image: url(img/动态1.jpg);
+			}
+			
+		</style>
 	</head>
 	<body>
 		<header >
