--- a/myself/college.html
+++ b/myself/college.html
@@ -42,7 +42,7 @@
 	</div>
 	</div>
 	<div id="section-th">
-	<div align="center">
+	<div align="center" style="background-color: burlywood;border-radius: 20px;box-shadow: 3px 3px 3px 3px plum;">
 		<p><a name="market">大一生活</a></p>
 		<p>
 			第一次走进这个陌生的校园，感觉好大、好美，月牙湖、凉亭、柳树、花朵……俨然错落有致，似乎是来到了一个精心设计的花园，
@@ -74,7 +74,7 @@
 	</div>
 				
 	
-	<div align="center">
+	<div align="center" style="background-color: burlywood;border-radius: 20px;box-shadow: 3px 3px 3px 3px plum;">
 		<p><a name="marke">大二生活</a></p>
 		<p>
 			刚刚进入大二时的我满脸好奇的稚气总算消退了不少不会再被师哥师姐们看作小生了。因为年龄长了思想也伴随着成熟了就
@@ -107,7 +107,7 @@
 	</div>
 	
 	
-	<div align="center">
+	<div align="center" style="background-color: burlywood;border-radius: 20px;box-shadow: 3px 3px 3px 3px plum;">
 		<p><a name="mark">大三生活</a></p>
 		<p>
 			在这忙碌的大三里，无论是思想上还是在学习工作上，我都收获很大。这一年比较忙碌，因为做得更多，想得也更多。这一
@@ -140,7 +140,7 @@
 	</div>
 		
 	
-	<div align="center">
+	<div align="center"style="background-color: burlywood;border-radius: 20px;box-shadow: 3px 3px 3px 3px plum;">
 		<p><a name="mar">大四生活</a></p>
 		<p>
 			未完待续
