--- a/myself/photo.html
+++ b/myself/photo.html
@@ -4,6 +4,17 @@
 		<meta charset="UTF-8">
 		<title>图片集锦</title>
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
+		<style>
+			 img:hover{
+            background: rgba(242, 88, 6, 0.87);
+            border-radius: 6px;
+            /*设置a元素在鼠标移入时放大1.5倍显示*/
+            transform: scale(1.5);
+            -webkit-transform: scale(1.5);
+            -moz-transform: scale(1.5);
+            -o-transform: scale(1.5);
+        }
+		</style>
 	</head>
 	<body >
 		<embed src="music/新垣結衣.mp3" autostart="true" loop="true" width="0"height="0"starttime="01:30" hidden="ture"></embed>
