--- a/myself/college.html
+++ b/myself/college.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
+		<meta  charset="UTF-8">
 		<title>大学生活</title>
 		<style>
 			p{
 			text-indent:2em;  
 			}
 		</style>
+		   <link rel="stylesheet" type="text/css" href="css/mybody.css" media="all" />
+        <script language="javascript" type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
 		<body >
@@ -191,6 +193,19 @@
 			</span>
 		</div>
 		</footer>
+		  <div id="scrollTop">
+            <div class="level-2"></div>
+            <div class="level-3"></div>
+        </div>
+    <script src="./js/script.js"></script>
+    <script type="text/javascript">
+        UI.global_search();
+        var uvOptions = {};
+        // !important
+        (function() {
+            initScrollTop();
+        })();
+    </script>
   
 	</body>
 </html>
