--- a/myself/xingxi.html
+++ b/myself/xingxi.html
@@ -9,6 +9,8 @@
 		}
 	</style>
 <link rel="stylesheet" href="css/style.css" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="css/mybody.css" media="all" />
+        <script language="javascript" type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
 </head>
 
 <body >
@@ -154,7 +156,19 @@
 		</footer>
   
 
-
+<div id="scrollTop">
+            <div class="level-2"></div>
+            <div class="level-3"></div>
+        </div>
+    <script src="./js/script.js"></script>
+    <script type="text/javascript">
+        UI.global_search();
+        var uvOptions = {};
+        // !important
+        (function() {
+            initScrollTop();
+        })();
+    </script>
 
 </body>
 </html>
