--- a/myself/form.html
+++ b/myself/form.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 		<title>登录</title>
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
+		  <link rel="stylesheet" type="text/css" href="css/mybody.css" media="all" />
+        <script language="javascript" type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
 		<style>
 			body{
 				background-image: url(img/动态1.jpg);
@@ -83,5 +85,18 @@
 			</span>
 		</div>
 		</footer>
+		<div id="scrollTop">
+            <div class="level-2"></div>
+            <div class="level-3"></div>
+        </div>
+    <script src="./js/script.js"></script>
+    <script type="text/javascript">
+        UI.global_search();
+        var uvOptions = {};
+        // !important
+        (function() {
+            initScrollTop();
+        })();
+    </script>
 	</body>
 </html>
