--- a/myself/myself.html
+++ b/myself/myself.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<title>首页</title>
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
+		  <link rel="stylesheet" type="text/css" href="css/mybody.css" media="all" />
+        <script language="javascript" type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
 	
 	
 	</head>
@@ -126,5 +128,18 @@
 	})();
 })();
 </script>
+<div id="scrollTop">
+            <div class="level-2"></div>
+            <div class="level-3"></div>
+        </div>
+    <script src="./js/script.js"></script>
+    <script type="text/javascript">
+        UI.global_search();
+        var uvOptions = {};
+        // !important
+        (function() {
+            initScrollTop();
+        })();
+    </script>
 	</body>
 </html>
