--- a/myself/photo.html
+++ b/myself/photo.html
@@ -15,6 +15,8 @@
             -o-transform: scale(1.5);
         }
 		</style>
+		  <link rel="stylesheet" type="text/css" href="css/mybody.css" media="all" />
+        <script language="javascript" type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
 	</head>
 	<body >
 		<embed src="music/新垣結衣.mp3" autostart="true" loop="true" width="0"height="0"starttime="01:30" hidden="ture"></embed>
@@ -133,6 +135,18 @@
 			</span>
 		</div>
 		</footer>
-
+<div id="scrollTop">
+            <div class="level-2"></div>
+            <div class="level-3"></div>
+        </div>
+    <script src="./js/script.js"></script>
+    <script type="text/javascript">
+        UI.global_search();
+        var uvOptions = {};
+        // !important
+        (function() {
+            initScrollTop();
+        })();
+    </script>
 	</body>
 </html>
