--- a/bdqn_APP/class7_12.html
+++ b/bdqn_APP/class7_12.html
@@ -46,20 +46,22 @@
 		</style>-->
 		<style>
 			div{
-				margin: 5px;
+				margin: 15px;
 				height: 20px;
+				padding: 10px;
 			}
 			.box1{
+				background: blue;
+			}
+			.box2{
 				background: red;
 				width: 100px;
 				height: 200px;
+				position: absolute;
+				top: 0;right: 0;
+				
 			}
-			.box2{
-				background: blue;
-			}
-			.box3{
-				background: yellow;
-			}
+			
 		</style>
 	</head>
 	<body>
@@ -83,7 +85,7 @@
 		-->
 		<div class="box1">第一个盒子</div>
 		<div class="box2"> 第二个盒子</div>
-		<div class="box3"> 第三个盒子</div>
+		
 		
 	</body>
 </html>
