--- a/bdqn_APP/下拉列表.html
+++ b/bdqn_APP/下拉列表.html
@@ -35,6 +35,9 @@
 				background: #930;
 				color: #FFF;
 			}
+			#jy{
+				position: relative;
+			}
 			.erji{
 				float: none;
 				background: #CCCCCC;
@@ -45,6 +48,7 @@
 			}
 			.erji-ul{
 				display: none;
+				position: absolute;
 			}
 			ul li:hover .erji-ul{
 				display: block;
@@ -55,7 +59,7 @@
 		<div id="nav">
 		<ul >
 			<li ><a href="#">百度</a></li>
-			<li ><a href="#">经验</a>
+			<li id="jy"><a href="#">经验</a>
 				<ul class="erji-ul">
 					<li class="erji"><a href="#">ul标签</a></li>
 					<li class="erji"><a href="#">li标签</a></li>
@@ -66,5 +70,6 @@
 			<li><a href="#">指南</a></li>
 		</ul>
 		</div>
+		规划和宝宝比较嫁汉嫁汉科技激动啥时候开大会卡看到监控坚实的祸所考
 	</body>
 </html>
