--- a/myself/form.html
+++ b/myself/form.html
@@ -32,7 +32,8 @@
 				</div>
 		</header>
 		<section id="section-th">
-		<form method="get" action="myself.html"style="text-align: center;"enctype="multipart/form-data">
+			
+		<form method="get" action="index.html"style="text-align: center;"enctype="multipart/form-data">
 			<div>
 				<label>账户：</label>
 				<input type="tel"placeholder="请输入电话"required="ture" />
