--- a/myself/index.html
+++ b/myself/index.html
@@ -1,23 +1,117 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="./css/mybody.css" media="all" />
-        <script language="javascript" type="text/javascript" src="./js/jquery-1.4.4.min.js"></script>
-    </head>
-    <body>
-        <div id="scrollTop">
-            <div class="level-2"></div>
-            <div class="level-3"></div>
-        </div>
-    <script src="./js/script.js"></script>
-    <script type="text/javascript">
-        UI.global_search();
-        var uvOptions = {};
-        // !important
-        (function() {
-            initScrollTop();
-        })();
-    </script>
-    </body>
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title></title>
+	<style>
+	div.lanren{
+		margin: 100px auto;
+		width: 800px;
+		animation: a 1000s;
+		position: relative;
+	}
+	img:nth-child(2){
+		position: absolute;
+		top: 80px;
+		left: 400px;
+		animation: b 1000s;
+		transform-origin:top center;
+	}
+	img:nth-child(3){
+		position: absolute;
+		top: 700px;
+		left: 400px;
+		animation: b 1000s;
+		transform-origin:top center;
+	}
+	img:nth-child(4){
+		position: absolute;
+		top: 300px;
+		left: 0px;
+		animation: b 1000s;
+		transform-origin:top center;
+	}
+	@keyframes a{
+		form{transform: rotate(0deg)}
+		to{transform: rotate(36000deg)}
+	}
+	@keyframes b{
+		form{transform: rotate(0deg)}
+		to{transform: rotate(-36000deg)}
+	}
+	</style>
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
+</head>
+
+<body>
+	<header >
+			
+			<div>
+		<div class="head" id="head-wen">
+			激<br />
+			扬
+		</div>
+			<div class="head">
+			<img class="img" src="img/01.jpg" />
+			</div>
+				<div class="head"id="head-wene">
+					青
+					<br />
+					春
+				</div>
+				</div>
+		</header>
+		<section>
+  	<div id="section-th">
+	<div class="lanren">
+		<img src="img/002.png">
+		<img src="img/001.png">
+		<img src="img/003.png">
+        <img src="img/004l.png">
+	</div>
+	 <div class="mu">
+		<ul id="mu">
+	<li>
+		<a href="myself.html"><strong>个人首页</strong></a>
+	</li>
+	<li>
+		<a href="jianjie.html"><strong>个人简介</strong></a>
+	</li>
+	<li>
+		<a href="college.html"><strong>大学生活</strong></a>
+	</li>
+	<li>
+		<a href="xingxi.html"><strong>个人信息</strong></a>
+	</li>
+	<li>
+		<a href="photo.html"><strong>图片集锦</strong></a>
+	</li>
+	<li>
+		<a href="chrome-extension://laookkfknpbbblfpciffpaejjkokdgca/dashboard.html"><strong>退出</strong></a>
+	</li>
+</ul>
+			
+  </div>
+  </section>
+	<footer class="footer-here">
+			<div>
+			<span id="span1">
+				<a href="https://www.baidu.com/"><strong>百度</strong></a>
+			</span>
+			<span id="span2">
+				<a href="http://www.bilibili.com/"><strong>bilibili</strong></a>
+			</span>
+			<span id="span3" >
+				<a href="http://www.acfun.cn/"><strong>acfun</strong></a>
+			</span>
+		</div>
+		
+		<div align="center">
+			
+			<span id="span4">
+				&copy;北大青鸟-2017
+			</span>
+		</div>
+		</footer>
+</body>
 </html>
